@@ -16,7 +16,6 @@ import org.telegram.telegrambots.meta.api.methods.ParseMode;
 import org.telegram.telegrambots.meta.api.methods.send.SendDocument;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.objects.InputFile;
-import org.telegram.telegrambots.meta.api.objects.Message;
 import org.telegram.telegrambots.meta.api.objects.Update;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.ReplyKeyboard;
@@ -45,19 +44,25 @@ public class Bot extends TelegramLongPollingBot {
     private AdopterCatRepository adopterCatRepository;
     private ReportDogRepository reportDogRepository;
     private ReportCatRepository reportCatRepository;
+    private AdopterDogService adopterDogService;
+    private Update update;
+
 
 //    public Bot(BotConfig config) {
 //        this.config = config;
 //    }
 
-    public Bot(BotConfig config, AdopterDogRepository adopterDogRepository, AdopterCatRepository adopterCatRepository, ReportDogRepository reportDogRepository, ReportCatRepository reportCatRepository) {
+    public Bot(BotConfig config, AdopterDogRepository adopterDogRepository, AdopterCatRepository adopterCatRepository,
+               ReportDogRepository reportDogRepository, ReportCatRepository reportCatRepository,
+               AdopterDogService adopterDogService) {
         this.config = config;
         this.adopterDogRepository = adopterDogRepository;
         this.adopterCatRepository = adopterCatRepository;
         this.reportDogRepository = reportDogRepository;
         this.reportCatRepository = reportCatRepository;
+        this.adopterDogService = adopterDogService;
     }
-
+    private static HashMap<Long,HashMap<Integer,Status>> changeProbationChatId = new HashMap<>();
     public static final HashMap<String, Long> REQUEST_FROM_USER = new HashMap<>();
     public boolean isDog = true;
 
@@ -76,6 +81,7 @@ public class Bot extends TelegramLongPollingBot {
 
     @Override
     public void onUpdateReceived(Update update) {
+        this.update = update;
 
         if (update.hasMessage() && update.getMessage().hasText()) {
             String messageText = update.getMessage().getText();
@@ -115,15 +121,19 @@ public class Bot extends TelegramLongPollingBot {
             } else if (SEND_CONTACT_CMD.equals(messageData) && isDog) {
                 //метод для отправки отчета в таблицу для собак
             } else if (SEND_CONTACT_CMD.equals(messageData)) {
-                //метод для отправки отчет в таблица для кошек
+//                метод для отправки отчет в таблица для кошек
             } else if (FINISH_PROBATION.equals(messageData)) {
-
                 //метод изменения статуса на Finished, метод информирования пользователя
+//                changeStatus(MESSAGE_DECISION_FINISH,update.getMessage().getText(),  FINISHED_PROBATION_PERIOD);
             } else if (EXTEND_PROBATION_14.equals(messageData)) {
                 //метод изменения статуса на Additional_14, метод информирования пользователя
+//                changeStatus(MESSAGE_DECISION_EXTEND_14,messageData,  ADDITIONAL_PERIOD_14);
             } else if (EXTEND_PROBATION_30.equals(messageData)) {
                 //метод изменения статуса на Additional_30, метод информирования пользователя
+//                changeStatus(MESSAGE_DECISION_EXTEND_30,messageData,  ADDITIONAL_PERIOD_30);
             } else if (REFUSE.equals(messageData)) {
+                update.getMessage().getMessageId();
+                changeStatus(update.getMessage().getMessageId(),MESSAGE_DECISION_REFUSE,messageData,  ADOPTION_DENIED);
                 //метод изменения статуса на Refuse, метод информирования пользователя
             } else sendMessage(chatId, MESSAGE_TEXT_NO_COMMAND);
         }
@@ -200,6 +210,12 @@ public class Bot extends TelegramLongPollingBot {
     public void sendMessageWithInlineKeyboard(long chatId, String textToSend, String... buttons) {
         InlineKeyboardMarkup inlineKeyboard = InlineKeyboardMaker(buttons);
         sendMessage(chatId, textToSend, inlineKeyboard);
+    }
+
+    public Integer sendMessageWithInlineKeyboardWithMessageId(Update update, long chatId, String textToSend, String... buttons) {
+        InlineKeyboardMarkup inlineKeyboard = InlineKeyboardMaker(buttons);
+        sendMessage(chatId, textToSend, inlineKeyboard);
+        return update.getUpdateId();
     }
 
     /**
@@ -441,32 +457,35 @@ public class Bot extends TelegramLongPollingBot {
 
         }
     }
-
+    private Update getUpdate(Update update){
+        return update;
+    }
     @Scheduled(cron = "30 * * * * *")
     private void sendFinishListForDogVolunteer() {
+
         List<AdopterDog> adoptersWithFinishProbationPeriod = adopterDogRepository.findAll().stream()
                 .filter(x -> (/*(x.getState() == PROBATION ||  x.getState() == ADDITIONAL_PERIOD_30)
                         && (LocalDate.now().getDayOfYear() +30 - x.getStatusDate().getDayOfYear() > 30))
                         || (x.getState() == ADDITIONAL_PERIOD_14
-                        && */(LocalDate.now().getDayOfYear() + 15 - x.getStatusDate().getDayOfYear()) > 14))
-                .collect(Collectors.toList());
+                        && */(LocalDate.now().getDayOfYear() + 15 - x.getStatusDate().getDayOfYear()) > 14)).toList();
         for (AdopterDog adopter : adoptersWithFinishProbationPeriod) {
-            int i = 1;
-            int adopterPeriod = LocalDate.now().getDayOfYear() + 15 - adopter.getStatusDate().getDayOfYear();
-            sendMessage(config.getVolunteerChatId(), adopter.getUserName() + " " + adopterPeriod);
-            sendMessageWithInlineKeyboard(config.getVolunteerChatId(), TAKE_DECISION, REFUSE);
-//            sendMessageWithInlineKeyboard(config.getVolunteerChatId(), "", EXTEND_PROBATION_14);
-//            sendMessageWithInlineKeyboard(config.getVolunteerChatId(), "", EXTEND_PROBATION_30);
-//            sendMessageWithInlineKeyboard(config.getVolunteerChatId(), "", REFUSE);
-            i++;
+            int updateId = sendMessageWithInlineKeyboardWithMessageId(update,config.getVolunteerChatId(),
+                    TAKE_DECISION + adopter.getUserName(),
+                    KEYBOARD_DECISION);
+            changeProbationChatId.put(adopter.getChatId(),new HashMap<>(updateId, adopter.getState().ordinal()));
         }
     }
 
-    private void changeStatus(Update update, String messageData, Status status){
-        AdopterDog adopterDog = adopterDogRepository.getReferenceById(update.getCallbackQuery().getMessage().getChatId());
+    private void changeStatus(int messageId,String botReplies, String messageData, Status status){
+        Long chatId = changeProbationChatId.entrySet().stream().filter(x->x.getValue().get(messageId).equals(status)).findFirst().get().getKey();
+//        String userName = messageData.split(": ")[1];
+//        Long chatId = adopterDogRepository.findAll().stream().filter(x -> x.getUserName().equals(userName)).findFirst().get().getChatId();
+        AdopterDog adopterDog = adopterDogService.get(chatId);
         adopterDog.setState(status);
-        adopterDogRepository.getReferenceById(adopterDog.getChatId()).setState(status);
-        AdopterDogService
-
+//        adopterDog.setStatusDate(LocalDate.now());
+        sendMessage(chatId,botReplies);
+        adopterDogRepository.save(adopterDog);
+        adopterDogService.update(adopterDog);
+        sendMessage(config.getVolunteerChatId(),botReplies);
     }
 }
